--- a/css/styles.css
+++ b/css/styles.css
@@ -62,9 +62,9 @@ img {
 
 
 .container {
-    max-width: 1158px;
+    max-width: 100%;
     margin: 0 auto;
-    padding: 0 15px;
+    padding: 0  16px;
 }
 
 
@@ -241,7 +241,8 @@ img {
 
 .advantages-section {
     background-color: var(--color-primary-light);
-    padding: 120px 0;
+    padding: 96px 0;
+    /*padding: 120px 0;*/
 }
 
 .visually-hidden {
@@ -259,12 +260,14 @@ img {
 
 .advantages-list {
     display: flex;
-    gap: 24px;
+    /*gap: 24px;*/
+    gap: 72px;
+    flex-wrap: wrap;
 }
 
 
-.advantage-item {
-    width: calc((100% - 72px) / 4);
+.advantages-item {
+    flex-basis: 100%;
 }
 
 .advantages-icon {
@@ -329,25 +332,26 @@ img {
 /*our team*/
 .team-section {
     background-color: var(--c-light);
-    padding: 120px 0;
+    padding: 96px 0;
 }
 
 .text-team-bgc {
     background-color: #FFF;
-    width: calc((100% - 72px) / 4);
     border-radius: 0px 0px 4px 4px;
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .team-list {
     display: flex;
-    gap: 24px;
+    /*gap: 24px;*/
+    gap: 72px;
     justify-content: center;
     flex-wrap: wrap;
 }
 
 .team-items{
     padding: 32px 0;
+    flex-basis: 100%; /*calc*/
     
 }
 
@@ -405,16 +409,14 @@ img {
 
 .portfolio-list {
     display: flex;
-    gap: 24px;
+    gap: 48px;
     justify-content: center;
     flex-wrap: wrap;
-    row-gap: 48px;
 }
 
 .portfolio-item {
     background: var(--color-primary-light);
-    width: calc((100% - 48px) / 3);
-    
+    flex-basis: 100%;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -859,3 +861,95 @@ img {
 
 
 /* END modal*/ 
+
+/*MEDIA*/
+
+
+@media screen and (min-width: 375px) {
+    .container {
+        max-width: 375px;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .container {
+        max-width: 768px;
+    }
+
+
+    .advantages-list {
+       gap: 24px;
+       row-gap: 72px;
+    }
+
+    .advantages-item {
+       flex-basis: calc((100% - 24px) / 2);
+    }
+
+    .advantages-icon {
+        
+    }
+
+
+    .team-list {
+        gap: 72px 24px; 
+    }
+
+    .team-items {
+        flex-basis: calc((100%-24px) / 2);
+    }
+
+
+
+    .portfolio-list {
+        gap: 24px;
+        row-gap: 64px;
+    }
+
+    .portfolio-item {
+        flex-basis: calc((100% - 24px) / 2);
+    }
+}
+
+@media screen and (min-width: 1158px) {
+    .container {
+        max-width: 1158px;
+        padding: 0 15px;
+    }
+
+
+ 
+     .advantages-item {
+        flex-basis: calc((100% - 72px) / 4);
+     }
+ 
+     .advantages-icon {
+         
+     }
+ 
+
+
+    .team-list {
+        gap: 24px; 
+    }
+
+    .team-items {
+        flex-basis: calc((100%-72px) / 4);
+    }
+
+    .team-section {
+        padding: 120px 0;
+    }
+
+
+
+    .portfolio-list {
+        row-gap: 48px;
+    }
+
+    .portfolio-item {
+        flex-basis: calc((100% - 48px) / 3);
+    }
+}
+
+
