--- a/css/styles.css
+++ b/css/styles.css
@@ -888,6 +888,60 @@ img {
 
 /* END modal*/ 
 
+
+
+/* MOBILE */
+
+.menu-container {
+    width: 100%;
+    height: 100%;
+    background-color: var(--color-primary-light);
+    position: fixed;
+    top: 0;
+    left: 0;
+    padding: 72px 16px 40px 16px;
+}
+
+.mobile-nav-list {
+   
+}
+
+.mobile-menu-item:not(:last-child) {
+    margin-bottom: 40px;
+}
+
+.mobile-nav-link {
+    font-size: 36px;
+    font-weight: 700;
+    line-height: 1.11;
+    letter-spacing: 0.02em;
+    text-align: left;
+    color: var(--c-brand);
+}
+
+.mobile-nav-link.current {
+    color: var(--logo-color);
+}
+
+.mobile-address-item:not(:last-child) {
+    margin-bottom: 24px;
+}
+
+.mobile-address-link {
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 1.2;
+    letter-spacing: 0.02em;
+    color: var(--color-primary);
+}
+
+.mobile-address-link.accent {
+   color: var(--logo-color);
+}
+/* end mobile */
+
+
+
 /*MEDIA*/
 
 /* tel */
