--- a/css/styles.css
+++ b/css/styles.css
@@ -88,7 +88,7 @@ img {
     letter-spacing: 0.03em;
     text-align: left;
     text-transform: uppercase;
-    /* margin-right: 76px; */
+    /* margin-right: 149px; */
 }
 
 .logo-accent {
@@ -131,6 +131,7 @@ img {
     align-items: center;
     margin: 16px;
     justify-content: space-between;
+    
 }
 
 /* 
@@ -388,11 +389,6 @@ img {
     gap: 24px;
 }
 
-.icon-sm {
-    width: 40px;
-    height: 40px;
-}
-
 .svg-item-team {
     fill: var(--c-light);
 }
@@ -406,6 +402,8 @@ img {
     align-items: center;
     justify-content: center;
     display: flex;
+    width: 40px;
+    height: 40px;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
    
 }
@@ -900,10 +898,19 @@ img {
     top: 0;
     left: 0;
     padding: 72px 16px 40px 16px;
+    display: flex;
+    flex-direction: column;
+    transform: translateX(100%);
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    ;
+}
+
+.menu-container.is-open {
+    transform: translateX(0);
 }
 
 .mobile-nav-list {
-   
+   margin-bottom: auto;
 }
 
 .mobile-menu-item:not(:last-child) {
@@ -923,6 +930,10 @@ img {
     color: var(--logo-color);
 }
 
+.mobile-address-list {
+    margin-bottom: 48px;
+}
+
 .mobile-address-item:not(:last-child) {
     margin-bottom: 24px;
 }
@@ -938,6 +949,15 @@ img {
 .mobile-address-link.accent {
    color: var(--logo-color);
 }
+
+.sm-mobile-list {
+    display: flex;
+    gap: 40px;
+    align-items: center;
+}
+
+
+
 /* end mobile */
 
 
@@ -977,6 +997,10 @@ img {
         display: none;
     }
 
+    .menu-container {
+        display: none;
+    }
+
 
 
 
@@ -995,7 +1019,7 @@ img {
     }
 
 
-    .nav-link.active:hover::after {
+    .nav-link.active::after {
         position: absolute;
         color: var(--c-active);
         content: "";
@@ -1009,6 +1033,7 @@ img {
     
     .nav-link.active {
         position: relative;
+        color: var(--c-active);
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
     
