--- a/css/styles.css
+++ b/css/styles.css
@@ -53,10 +53,12 @@ p,h1,h2,h3,h4,h5,h6 {
     margin: 0;
 }
 
-img {
+img,
+svg {
     display: block;
     max-width: 100%;
     height: auto;
+
 }
 
 
@@ -223,15 +225,20 @@ img {
 
 .hero-section {
     background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)),
-                      url(../images/background/people-office.jpg);
+                      url(../images/background/people-office_mob.jpg);
     background-repeat: no-repeat;     
     background-position: center;     
     background-size: cover;   
     padding: 188px 0; 
     background-color: var(--c-brand);
-    max-width: 1440px;
+    max-width: 767px; /*1440px*/
     margin: 0 auto;
 }
+
+
+
+
+ 
 
 .hero-button {
     margin: auto;
@@ -490,21 +497,11 @@ img {
 
 .footer{
     background-color: var(--c-brand);
-    padding: 100px 0;
+    padding: 96px 0; 
     align-items: center;
 }
 
 
-
-.footer-con {
-    display: flex;
-    align-items: baseline;
-}
-
-.fotter-logo-con {
-    margin-right: 120px;
-
-}
 
 .footer-logo{
     color: var(--logo-color);
@@ -514,7 +511,7 @@ img {
     line-height: 1.17;
     letter-spacing: 0.03em;
     text-transform: uppercase;
-    display: inline-block;
+    display: inline-flex;
     margin-bottom: 16px;
 
 }
@@ -529,12 +526,24 @@ img {
     font-size: 16px;
     line-height:1.5;
     letter-spacing: 0.02em;
-    max-width: 264px;
+    max-width: 288px;
 }
+
+/* .footer-con {
+    display: flex;
+    align-items: baseline;
+}
+
+.fotter-logo-con {
+    margin-right: 120px;
+
+} 
 
 .footer-sm {
     margin-right: 80px;
-}
+} */
+
+
 
 .sm-f-list {
     display: flex;
@@ -581,11 +590,6 @@ img {
 }
 
 
-.footer-subscribe {
-    display: flex;
-    gap: 24px;
-}
-
 .footer-p-sm {
     color: var(--color-primary-light);
     font-size: 16px;
@@ -603,7 +607,7 @@ img {
 
 .footer-input {
     border-radius: 4px;
-    width: 264px;
+    width: 288px;
     height: 40px;
     border: 1px solid var(--color-primary-light);
     padding: 8px 16px;
@@ -634,6 +638,7 @@ img {
     font-family: "Roboto",sans-serif;
     min-width: 165px;
     height: 40px;
+    margin: 0 auto;
 }
 
 
@@ -965,9 +970,19 @@ img {
 /*MEDIA*/
 
 /* tel */
-@media screen and (min-width: 375px) {
+@media screen and (min-width: 320px) and (min-resolution: 192dpi) {
+    .hero-section {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)),
+                          url(../images/background/people-office_mob@2x.jpg);
+    }    
+
+    .portfolio-img {
+        width: 288px;
+        height: 280px;
+    }
+ 
     .container {
-        max-width: 375px;
+        max-width: 320px;
     }
 }
 
@@ -984,11 +999,42 @@ img {
     .advantages-title {
         text-align: center;
     }
+
+    .logo-f-mob {
+        text-align: center;
+    }
+
+    
+    .fotter-logo-con {
+        margin-bottom: 72px;
+    }
+
+    .footer-sm {
+    margin-bottom: 72px;
+    }
+  
+    .footer-p-sm {
+        text-align: center;
+    }
+
+    .footer-input {
+        margin-bottom: 16px;
+    }
+
+    .footer-title-sm {
+        text-align: center;
+    }
+
+    .sm-f-list {
+        justify-content: center;
+    }
 }
+
 
 /* tablo */
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 768px) and (min-resolution: 192dpi) {
+  
     .container {
         max-width: 768px;
     }
@@ -1090,12 +1136,6 @@ img {
         color: var(--c-active);
     }
 
-    
-
-
-
-
-
 
 
 
@@ -1110,6 +1150,16 @@ img {
         margin-top: 36px;
     }
 
+    .hero-section {
+        max-width: 1157px;
+        background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)),
+                          url(../images/background/people-office_tab@2x.jpg);
+
+        background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)),
+                          url(../images/background/people-office_tab.jpg);
+    }  
+    
+   
 
 
 
@@ -1145,11 +1195,50 @@ img {
     .portfolio-item {
         flex-basis: calc((100% - 24px) / 2);
     }
+
+    .portfolio-img {
+        width: 356px;
+        height: 300px;
+    }
+
+
+
+
+    .footer-con {
+        display: flex;
+        padding-left: 108px;
+    }
+
+    .footer-text {
+        max-width: 264px;
+    }
+
+    .footer-subscribe {
+    display: flex;
+    gap: 24px;
+    }
+
+
+    .footer-input {
+        width: 264px;
+    }
+}
+
+@media screen and (max-width: 1157px) {
+    .adv-svg {
+        display: none;
+    }
+
+    .footer-con {
+        flex-wrap :wrap;
+        gap: 24px;
+        row-gap: 72px;
+    }
 }
 
 /* desktop */
 
-@media screen and (min-width: 1158px) {
+@media screen and (min-width: 1158px) and (min-resolution: 192dpi) {
     .container {
         max-width: 1158px;
         padding: 0 15px;
@@ -1177,8 +1266,15 @@ img {
         margin-top: 48px;
     }
 
+    .hero-section {
+        max-width: 1440px;
+        background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)),
+                          url(../images/background/people-office_dask.jpg);
+        background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)),
+                          url(../images/background/people-office\ _dask@2x.jpg);
+    }   
 
- 
+     
      .advantages-item {
         flex-basis: calc((100% - 72px) / 4);
      }
@@ -1217,6 +1313,31 @@ img {
 
     .portfolio-item {
         flex-basis: calc((100% - 48px) / 3);
+    }
+
+    .portfolio-img {
+        width: 360px;
+    }
+
+
+
+    .footer {
+        padding: 100px 0;
+    }
+
+    .footer-con {
+        display: flex;
+        align-items: baseline;
+        flex-wrap: nowrap;
+    }
+    
+    .fotter-logo-con {
+        margin-right: 120px;
+    
+    } 
+    
+    .footer-sm {
+        margin-right: 80px;
     }
 }
 
