--- a/css/styles.css
+++ b/css/styles.css
@@ -76,7 +76,6 @@ svg {
 .header {
     position: relative;
     border-bottom: 1px solid var(--c-border); 
-    /* padding: 0 15px 0 15px; */
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08),
                 0px 1px 1px rgba(46, 47, 66, 0.16),
                 0px 1px 6px rgba(46, 47, 66, 0.08);
@@ -91,8 +90,7 @@ svg {
     letter-spacing: 0.03em;
     text-align: left;
     text-transform: uppercase;
-    /* margin-right: 149px; */
-}
+}    
 
 .logo-accent {
     color: var(--c-brand);
@@ -140,91 +138,6 @@ svg {
     
 }
 
-/* 
-.nav-link.active:hover::after {
-    position: absolute;
-    color: var(--c-active);
-    content: "";
-    width: 100%;
-    left: 0;
-    bottom: -1px;
-    height: 4px;
-    background-color: var(--c-active);
-    border-radius: 2px;
-    
-}
-
-.nav-link.active {
-    position: relative;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.nav-link.active:hover,
-.nav-link.active:active,
-.nav-link.active:focus {
-    color: var(--c-active);
-}
-
-
-.nav-link {
-    display: inline-block;
-    padding: 24px 0;
-    color: var(--c-brand);  
-    text-transform: capitalize;
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-    transition: background-color color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-
-.nav-list {
-    display: flex;
-    flex-grow: 1;
-    justify-content: center;
-    gap: 40px;
-
-}
-
-.address-list {
-    display: flex;
-    flex-grow: 1;
-    justify-content: center;
-    gap: 40px;
-}
-
-.header-address {
-    display: flex;
-    gap: 40px;
-}
-
-
-
-
-.address {
-    font-style: normal; 
-}
-
-
-.address-link {
-    color: var(--color-primary);
-    font-weight: 400;
-    line-height: 1.5;
-    font-size: 16px;
-    letter-spacing: 0.02em;
-    
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.address-link:active, 
-.address-link:hover,
-.address-link:focus {
-    color: var(--c-active);
-} */
-
-/*hero-section*/
-
 
 
 .hero-section {
@@ -235,10 +148,34 @@ svg {
     background-size: cover;   
     padding: 188px 0; 
     background-color: var(--c-brand);
-    max-width: 767px; /*1440px*/
+    max-width: 767px; 
     margin: 0 auto;
 }
 
+@media screen and (min-width: 320px) and (min-resolution: 192dpi) {
+    .hero-section {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)),
+                          url(../images/background/people-office_mob@2x.jpg);
+    } 
+}
+
+
+@media screen and (min-width: 768px) and (min-resolution: 192dpi) {
+    .hero-section {
+        
+        background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)),
+        url(../images/background/people-office_tab@2x.jpg);
+    } 
+}
+
+@media screen and (min-width: 1158px) and (min-resolution: 192dpi) {
+    
+    .hero-section {
+        background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)),
+        url(../images/background/people-office\_dask@2x.jpg);                        
+
+   }  
+}
 
 
 
@@ -298,7 +235,6 @@ svg {
 
 .advantages-list {
     display: flex;
-    /*gap: 24px;*/
     gap: 72px;
     flex-wrap: wrap;
 }
@@ -308,17 +244,6 @@ svg {
     flex-basis: 100%;
 }
 
-/*.advantages-icon {
-    border-radius: 4px;
-    border: 1px solid var(--c-border);
-    background: var(--c-light );
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 24px;
-    margin-bottom: 8px;
-    height: 112px;
-}*/
 
 .advantages-title {
     color: var(--c-brand);
@@ -381,7 +306,6 @@ svg {
 
 .team-list {
     display: flex;
-    /*gap: 24px;*/
     gap: 72px;
     justify-content: center;
     flex-wrap: wrap;
@@ -389,7 +313,7 @@ svg {
 
 .team-items{
     padding: 32px 0;
-    flex-basis: 100%; /*calc*/
+    flex-basis: 100%; 
     
 }
 
@@ -533,19 +457,6 @@ svg {
     max-width: 288px;
 }
 
-/* .footer-con {
-    display: flex;
-    align-items: baseline;
-}
-
-.fotter-logo-con {
-    margin-right: 120px;
-
-} 
-
-.footer-sm {
-    margin-right: 80px;
-} */
 
 
 
@@ -647,9 +558,9 @@ svg {
 
 
 
-.footer-buttom:focus,
-.footer-buttom:hover {
-    outline: none;
+.fotter-buttom:focus,
+.fotter-buttom:hover {
+
     background-color: var(--c-active);
 } 
 
@@ -689,8 +600,6 @@ svg {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%) scale(1);
-    /* width: 408px;
-    min-height: 584px; */
     width: 288px;
     min-height: 623px;
     overflow: auto;
@@ -831,7 +740,6 @@ svg {
     margin: 16px 0 24px 0;
     display: flex;
     align-items: center;
-    gap: 8px;
 }
 
 .modal-cb-check {
@@ -856,6 +764,7 @@ svg {
     line-height: 1.17;
     letter-spacing: 0.04em;
 }
+
 
 .modal-a-pp {
     color: var(--logo-color);
@@ -976,11 +885,8 @@ svg {
 /*MEDIA*/
 
 /* tel */
-@media screen and (min-width: 320px) and (min-resolution: 192dpi) {
-    .hero-section {
-        background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)),
-                          url(../images/background/people-office_mob@2x.jpg);
-    }    
+@media screen and (min-width: 320px) {
+        
 
     .portfolio-img {
         width: 288px;
@@ -1040,7 +946,7 @@ svg {
 
 /* tablo */
 
-@media screen and (min-width: 768px) and (min-resolution: 192dpi) {
+@media screen and (min-width: 768px) {
   
     .container {
         max-width: 768px;
@@ -1093,9 +999,9 @@ svg {
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
     
-    .nav-link.active:hover,
-    .nav-link.active:active,
-    .nav-link.active:focus {
+    .nav-link:hover,
+    .nav-link:active,
+    .nav-link:focus {
         color: var(--c-active);
     }
     
@@ -1159,18 +1065,13 @@ svg {
     .hero-button {
         margin-top: 36px;
     }
-
+   
     .hero-section {
-        max-width: 1156px;
-        background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)),
-                          url(../images/background/people-office_tab@2x.jpg);
-
+        max-width: 1157px;
         background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)),
                           url(../images/background/people-office_tab.jpg);
-    }  
-    
-   
 
+    }
 
 
     .advantages-list {
@@ -1252,7 +1153,7 @@ svg {
 
 /* desktop */
 
-@media screen and (min-width: 1158px) and (min-resolution: 192dpi) {
+@media screen and (min-width: 1158px) {
     .container {
         max-width: 1158px;
         padding: 0 15px;
@@ -1281,15 +1182,13 @@ svg {
     .hero-button {
         margin-top: 48px;
     }
-
+ 
     .hero-section {
-        max-width: 1158px;
+        max-width: 1440px;
         background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)),
-                          url(../images/background/people-office_dask.jpg);
-        background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)),
-                          url(../images/background/people-office\ _dask@2x.jpg);
-    }   
-
+                           url(../images/background/people-office_dask.jpg);
+ 
+    }
      
      .advantages-item {
         flex-basis: calc((100% - 72px) / 4);
