--- a/css/styles.css
+++ b/css/styles.css
@@ -146,7 +146,7 @@ svg {
     background-repeat: no-repeat;     
     background-position: center;     
     background-size: cover;   
-    padding: 188px 0; 
+    padding: 72px 0; 
     background-color: var(--c-brand);
     max-width: 767px; 
     margin: 0 auto;
@@ -257,6 +257,7 @@ svg {
 .advantage-text {
     font-size: 16px;
     line-height:1.5;
+    font-weight: 500;
     letter-spacing: 0.02em;
 }
 
@@ -375,7 +376,6 @@ svg {
 
 .portfolio-item {
     background: var(--color-primary-light);
-    flex-basis: 100%;
     transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -1020,7 +1020,8 @@ svg {
     
     
     .address-list {
-        display: inline;
+        display: flex;
+        flex-direction: column;
         flex-grow: 1;
         justify-content: center;
         gap: 12px;
@@ -1067,6 +1068,7 @@ svg {
     }
    
     .hero-section {
+        padding: 112px 0;
         max-width: 1157px;
         background-image: linear-gradient(rgba(46, 47, 66, 0.70), rgba(46, 47, 66, 0.70)),
                           url(../images/background/people-office_tab.jpg);
@@ -1166,6 +1168,7 @@ svg {
     
     .address-list {
         display: flex;
+        flex-direction: row;
         gap: 40px;
     }
     
